--- a/Magento_Cookie/templates/notices.phtml
+++ b/Magento_Cookie/templates/notices.phtml
@@ -99,9 +99,7 @@ if ($cookieHelper->isCookieRestrictionModeEnabled()): ?>
                 </p>
                 <p class="mb-1">
                     <span>
-                        <?= $escaper->escapeHtml(__( // phpcs:disable Generic.Files.LineLength.TooLong
-                            'To comply with the new e-Privacy directive, we need to ask for your consent to set the cookies.'
-                        )) // phpcs:enable ?>
+                        <?= $escaper->escapeHtml(__('To comply with the new e-Privacy directive, we need to ask for your consent to set the cookies.')) ?>
                     </span>
                 </p>
                 <p class="mb-4">
