--- a/Magento_Customer/templates/address/grid.phtml
+++ b/Magento_Customer/templates/address/grid.phtml
@@ -21,14 +21,14 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
 
 <div class="block block-addresses-list">
     <div class="block-title text-2xl mb-6">
-<?= $escaper->escapeHtml(__('Address Book')) ?></div>
+        <?= $escaper->escapeHtml(__('Address Book')) ?>
+    </div>
     <div class="block-content" x-data="initAddresses()">
         <?php if ($additionalAddresses = $block->getAdditionalAddresses()): ?>
             <div class="card grid grid-cols-3 lg:grid-cols-6 my-6">
                 <div class="text-sm text-secondary p-2">
-                    <?= $escaper->escapeHtml(
-                        __('Company')
-                    ) ?></div>
+                    <?= $escaper->escapeHtml(__('Company')) ?>
+                </div>
                 <div class="hidden lg:block text-sm text-secondary p-2">
                     <?= $escaper->escapeHtml(__('Name')) ?>
                 </div>
@@ -46,7 +46,8 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
                 <?php foreach ($additionalAddresses as $address): ?>
                     <?php $i++ ?>
                     <div class="p-2 <?= $i % 2 === 0 ? '' : ' bg-container-darker' ?>">
-                        <?= $escaper->escapeHtml($address->getCompany()) ?></div>
+                        <?= $escaper->escapeHtml($address->getCompany()) ?>
+                    </div>
                     <div class="hidden lg:block p-2 <?= $i % 2 === 0 ? '' : ' bg-container-darker' ?>">
                         <?= $escaper->escapeHtml($address->getLastname()) ?>,
                         <?= $escaper->escapeHtml($address->getFirstname()) ?>
