--- a/Magento_Customer/templates/form/login.phtml
+++ b/Magento_Customer/templates/form/login.phtml
@@ -51,9 +51,7 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                     </h2>
                 </legend>
                 <div class="text-secondary-darker mb-8">
-                    <?= $escaper->escapeHtml(
-                        __('If you have an account, sign in with your email address.')
-                    ) ?>
+                    <?= $escaper->escapeHtml(__('If you have an account, sign in with your email address.')) ?>
                 </div>
                 <div class="field email required">
                     <label class="label" for="email">
@@ -119,7 +117,8 @@ $recaptcha = $block->getData('viewModelRecaptcha');
                         <button type="submit" class="btn btn-primary disabled:opacity-75" name="send"
                             <?php if ($loginButtonViewModel->disabled()): ?> disabled data-recaptcha-btn<?php endif; ?>
                         >
-                            <span><?= $escaper->escapeHtml(__('Sign In')) ?></span></button>
+                            <span><?= $escaper->escapeHtml(__('Sign In')) ?></span>
+                        </button>
                         <a class="underline text-secondary" href="<?= $escaper->escapeUrl(
                             $block->getForgotPasswordUrl()
                         ) ?>"><span><?= $escaper->escapeHtml(__('Forgot Your Password?')) ?></span>
