--- a/Magento_Review/templates/form.phtml
+++ b/Magento_Review/templates/form.phtml
@@ -88,9 +88,7 @@ mutation createProductReviewMutation(
                 <fieldset>
                     <legend class="text-xs">
                         <span>
-                            <?= $escaper->escapeHtml(
-                                __("You're reviewing:")
-                            ) ?>
+                            <?= $escaper->escapeHtml(__("You're reviewing:")) ?>
                         </span>
                         <span class="font-semibold">
                             <?= $escaper->escapeHtml($block->getProductInfo()->getName()) ?>
@@ -108,7 +106,7 @@ mutation createProductReviewMutation(
                                             <div class="table-row">
                                                 <label
                                                     class="table-cell pr-6 align-middle text-left"
-                                                    id="<?= $escaper->escapeHtml($rating->getRatingCode()) ?>_rating_label"
+                                                    id="<?= $escaper->escapeHtmlAttr($rating->getRatingCode()) ?>_rating_label"
                                                 >
                                                     <span>
                                                         <?php if ($block->getRatings()->getSize() <= 1): ?>
@@ -131,14 +129,8 @@ mutation createProductReviewMutation(
                                                         >
                                                             <label
                                                                 class="rating-<?= (int)$iterator ?> m-0 cursor-pointer text-gray-400"
-                                                                for="<?= $escaper
-                                                                     ->escapeHtmlAttr(
-                                                                         $rating->getRatingCode() . '_' . $option->getValue()
-                                                                     ) ?>"
-                                                                id="<?= $escaper
-                                                                    ->escapeHtmlAttr(
-                                                                        $rating->getRatingCode() . '_' . $option->getValue()
-                                                                    ) ?>_label"
+                                                                for="<?= $escaper->escapeHtmlAttr($rating->getRatingCode() . '_' . $option->getValue()) ?>"
+                                                                id="<?= $escaper->escapeHtmlAttr($rating->getRatingCode() . '_' . $option->getValue()) ?>_label"
                                                             >
                                                                 <span :class="<?= (int)$iterator ?> <= clickedRatingId
                                                                     ? 'text-yellow-400'
@@ -192,7 +184,7 @@ mutation createProductReviewMutation(
                             <div>
                                 <input class="form-input mt-3 block w-full text-sm"
                                        required
-                                       placeholder="<?= $escaper->escapeHtml(__('Summary') . '*') ?>" type="text"
+                                       placeholder="<?= $escaper->escapeHtmlAttr(__('Summary') . '*') ?>" type="text"
                                        name="title"
                                        id="summary_field"/>
                             </div>
@@ -204,7 +196,7 @@ mutation createProductReviewMutation(
                             <div>
                             <textarea class="form-input mt-3 block w-full text-sm"
                                       required
-                                      placeholder="<?= $escaper->escapeHtml(__('Review') . '*') ?>" name="detail"
+                                      placeholder="<?= $escaper->escapeHtmlAttr(__('Review') . '*') ?>" name="detail"
                                       id="review_field" cols="5"
                                       rows="3"></textarea>
                             </div>
@@ -305,10 +297,7 @@ mutation createProductReviewMutation(
                                 Object.keys(this.ratings).length === <?= count($block->getRatings()) ?>
                             )) {
                                 this.setErrorMessages(
-                                    ['<?= $escaper
-                                        ->escapeJs(
-                                            __('Please verify you\'ve entered all required information')
-                                        ) ?>']
+                                    ['<?= $escaper->escapeJs(__('Please verify you\'ve entered all required information')) ?>']
                                 );
                                 this.displayErrorMessage = true;
                                 this.errors = 1;
