#1089 Do not reassign a reference declared with const

--- a/Magento_Checkout/templates/php-cart/shipping.phtml
+++ b/Magento_Checkout/templates/php-cart/shipping.phtml
@@ -259,11 +259,7 @@ $totalsOutput = $viewModels->require(TotalsOutput::class);
             saveToCustomerSectionData(){
                 const browserStorage = hyva.getBrowserStorage();
 
-                const sectionData = JSON.parse(browserStorage.getItem('mage-cache-storage'));
-
-                if (!sectionData) {
-                    sectionData = {};
-                }
+                const sectionData = JSON.parse(browserStorage.getItem('mage-cache-storage')) || {};
 
                 if (!sectionData['checkout-data']) {
                     sectionData['checkout-data'] = {};
