ADD: product page title with args to remove any aria

--- a/Magento_Catalog/layout/catalog_product_view.xml
+++ b/Magento_Catalog/layout/catalog_product_view.xml
@@ -78,6 +78,14 @@
                             </argument>
                         </arguments>
 
+                        <block class="Magento\Theme\Block\Html\Title" name="product.info.title" template="Magento_Theme::html/title.phtml">
+                            <arguments>
+                                <argument name="maybe_purged_tailwind_section_classes" xsi:type="string">hidden mb-6 font-bold md:flex md:flex-row md:flex-wrap</argument>
+                                <argument name="heading_tag" xsi:type="string">div</argument>
+                                <argument name="aria_hidden" xsi:type="boolean">true</argument>
+                            </arguments>
+                        </block>
+
                         <block class="Magento\Catalog\Block\Product\View" name="product.info.review"
                                template="Magento_Catalog::product/view/review.phtml" ifconfig="catalog/review/active"/>
 
