--- a/Magento_Review/templates/form.phtml
+++ b/Magento_Review/templates/form.phtml
@@ -171,7 +171,7 @@ mutation createProductReviewMutation(
                                 <span><?= $escaper->escapeHtml(__('Nickname')) ?></span>
                             </label>
                             <div>
-                                <input class="form-input mt-3 block w-full text-sm"
+                                <input class="form-input mt-3 block w-full"
                                        required
                                        placeholder="<?= $escaper->escapeHtmlAttr(__('Nickname') . '*') ?>" type="text"
                                        name="nickname" id="nickname_field"
@@ -183,7 +183,7 @@ mutation createProductReviewMutation(
                                 <span><?= $escaper->escapeHtml(__('Summary')) ?></span>
                             </label>
                             <div>
-                                <input class="form-input mt-3 block w-full text-sm"
+                                <input class="form-input mt-3 block w-full"
                                        required
                                        placeholder="<?= $escaper->escapeHtmlAttr(__('Summary') . '*') ?>" type="text"
                                        name="title"
@@ -196,7 +196,7 @@ mutation createProductReviewMutation(
                                 <span><?= $escaper->escapeHtml(__('Review')) ?></span>
                             </label>
                             <div>
-                            <textarea class="form-input mt-3 block w-full text-sm"
+                            <textarea class="form-input mt-3 block w-full"
                                       required
                                       placeholder="<?= $escaper->escapeHtmlAttr(__('Review') . '*') ?>" name="detail"
                                       id="review_field" cols="5"
