--- a/Magento_Review/templates/helper/summary.phtml
+++ b/Magento_Review/templates/helper/summary.phtml
@@ -40,7 +40,7 @@ $uniqueId = $productId . uniqid();
         <?php if ($reviewCount): ?>
             itemprop="aggregateRating"
             itemscope
-            itemtype="http://schema.org/AggregateRating"
+            itemtype="https://schema.org/AggregateRating"
         <?php endif; ?>
         :tabindex="shortReviewSectionTabindex"
         :aria-label="shortReviewSectionAriaLabel"
