--- a/Magento_Catalog/templates/product/list/toolbar/limiter.phtml
+++ b/Magento_Catalog/templates/product/list/toolbar/limiter.phtml
@@ -24,7 +24,7 @@ $availableLimitOptions = $block->getAvailableLimit();
     <div class="field limiter flex items-center order-3 sm:order-2 md:order-3 lg:order-2 col-span-2 justify-end">
         <div class="control">
             <label class="text-sm label">
-                <span aria-label="<?= $escaper->escapeHtmlAttr(__('Show items per page')) ?>">
+                <span class="mr-2" aria-label="<?= $escaper->escapeHtmlAttr(__('Show items per page')) ?>">
                     <?= $escaper->escapeHtml((string)__('Show')) ?>
                 </span>
                 <select
