--- a/Magento_Theme/templates/html/pager.phtml
+++ b/Magento_Theme/templates/html/pager.phtml
@@ -216,7 +216,7 @@ $pagerItemBtnClass = $pagerItemClass
     <?php if ($block->isShowPerPage()): ?>
         <div class="flex items-center justify-end order-3 col-span-2 limiter sm:order-2 md:order-3 lg:order-2">
             <label class="text-sm label">
-                <span aria-label="<?= $escaper->escapeHtmlAttr(__('Show items per page')) ?>">
+                <span class="mr-2" aria-label="<?= $escaper->escapeHtmlAttr(__('Show items per page')) ?>">
                     <?= $escaper->escapeHtml(__('Show')) ?>
                 </span>
                 <select
