--- a/Magento_Catalog/templates/product/view/breadcrumbs.phtml
+++ b/Magento_Catalog/templates/product/view/breadcrumbs.phtml
@@ -54,7 +54,7 @@ $product = $currentProductViewModel->exists() ? $currentProductViewModel->get() 
                         <span class="text-primary-lighter" x-text="item.label"></span>
                     </template>
                     <template x-if="item.name !== 'product'">
-                        <a :href="item.link" class="no-underline" x-text="item.label"></a>
+                        <a :href="item.link" x-text="item.label"></a>
                     </template>
                 </li>
             </template>
